name:                shoes
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Yorick Laupa
maintainer:          yo.eight@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:       lib
  build-depends:        base                >=4.6      && < 4.7
                      , aeson
                      , attoparsec
                      , base64-bytestring   >= 1.0     && < 1.1
                      , blaze-builder
                      , blaze-html
                      , bytestring          >= 0.9     && < 0.11
                      , conduit             >= 1.0     && < 1.1
                      , data-default
                      , fast-logger         >= 2.0.0
                      , monad-logger        >= 0.3
                      , persistent          >= 1.2     && < 1.3
                      , persistent-sqlite   >= 1.2     && < 1.3
                      , persistent-template >= 1.2     && < 1.3
                      , resourcet           >= 0.4.3   && < 0.5
                      , text                >= 0.11    && < 1.2
                      , yesod               >= 1.2     && < 1.3
                      , yesod-core          >= 1.2     && < 1.3
                      , wai-extra           >= 1.3
                      , wai-logger          >= 2.0.0
                      , warp                >= 1.3.8

  exposed-modules:    Application
                      Foundation
                      Shoes
                      Shoes.Model

  ghc-options: -Wall -Werror -threaded -O2

  default-language:    Haskell2010

executable shoes
  main-is: Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.6 && <4.7
                     , shoes
                     , yesod
  ghc-options: -Wall -Werror -threaded -O2

  -- hs-source-dirs:
  default-language:    Haskell2010